# Envyron

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: domains.ipynb  representations.ipynb
docs/source/: conf.py  envyron.cli.rst  envyron.io.input.rst  envyron.io.rst  envyron.rst  index.rst  modules.rst
src/envyron/: __init__.py  __main__.py  calculator.py  main.py  setup.py
src/envyron/boundaries/: __init__.py  boundary.py  electronic.py  ionic.py  system.py
src/envyron/cli/: main.py
src/envyron/cores/: __init__.py  analytic_1d.py  container.py  core.py  fft.py
src/envyron/domains/: __init__.py  cell.py  mapping.py
src/envyron/io/: __init__.py  cube.py  defaults.json  input.py  input_utils.py  output.py  params.json
src/envyron/io/input/: __main__.py  base.py  defaults.json  input.py  params.json  types.py  utils.py  validation.py
src/envyron/io/input/base/: __init__.py  base.py  types.py
src/envyron/physical/: __init__.py  charges.py  dielectric.py  electrolyte.py  electrons.py  externals.py  ions.py  iontype.py  semiconductor.py  system.py
src/envyron/representations/: __init__.py  density.py  field.py  gradient.py  hessian.py
src/envyron/representations/functions/: __init__.py  container.py  erfc.py  function.py  gaussian.py
src/envyron/solvers/: __init__.py  direct.py  fixedpoint.py  gradient.py  iterative.py  newton.py  setup.py  solver.py
src/envyron/utils/: constants.py
stubs/envyron/: __main__.pyi
stubs/envyron/cli/: main.pyi
stubs/envyron/cui/: main.pyi
stubs/envyron/io/: __init__.pyi
stubs/envyron/io/input/: __main__.pyi  base.pyi  input.pyi  types.pyi  utils.pyi  validation.pyi
stubs/envyron/io/input/base/: __init__.pyi
tests/: H2O.cube  charges_test.py  conftest.py  container_test.py  density.cube  density_test.py  environ.ini  erfc_test.py  externals_test.py  field_test.py  function_test.py  gaussian_test.py  gradient_test.py  hessian_test.py  input.yml  test.ipynb  tester.ipynb  volume.yml
tests/domains/: cell_test.py
tests/io/input/: base_test.py  input_test.py  types_test.py
tests/io/input/data/: cionmax_rion.ini  custom.ini  electrolyte.ini  environ.ini  environment.ini  externals.ini  regions.ini  spreads.ini  water.yml
tests/physical/: charges_test_tmp.py  electrolyte_test.py  electrons_tets_tmp.py  iontype_test_tmp.py
tests/qepy/: gpe.ipynb  surface.ipynb  volume.ipynb
tests/qepy/data/: gpe.yml  surface.yml
tests/qepy/data/references/: README.md  vacuum_01.out
tests/representations/: density_test.py  density_test_tmp.py  field_test_tmp.py
tests/representations/functions/: container_test.py
