[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "envyron"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [{ name = "Edan Bainglass", email = "edan.bainglass@unt.edu" }]
maintainers = [{ name = "Edan Bainglass", email = "edan.bainglass@unt.edu" }]
keywords = [
    "physics",
    "chemistry",
    "quantum",
    "embedding",
    "continuum",
    "solvation"
]
classifiers = ["Operating System :: OS Independent", "Private :: Do Not Upload"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/environ-developers/envyron"
Documentation = "https://environ.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = ["pytest >=2.7.3"]
doc = ["sphinx"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rN -v --tb=short"
testpaths = "tests"
markers = ["datadir: change directory to data location"]

[tool.mypy]
mypy_path = "stubs"
strict_optional = false
ignore_missing_imports = true
