[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "envyron"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Edan Bainglass", email = "edan.bainglass@unt.edu" }]
maintainers = [{ name = "Edan Bainglass", email = "edan.bainglass@unt.edu" }]
keywords = [
    "physics",
    "chemistry",
    "quantum",
    "embedding",
    "continuum",
    "solvation"
]
classifiers = ["Operating System :: OS Independent", "Private :: Do Not Upload"]
dynamic = ["version", "description"]
dependencies = [
    "PyYAML ~= 6.0",
    "pydantic ~= 1.9",
    "scipy ~= 1.8",
    "dftpy @ git+https://gitlab.com/pavanello-research-group/dftpy.git",
    "multipledispatch ~= 0.6.0"
]

[project.optional-dependencies]
tester = ["pytest ~= 7.0"]
linter = ["flake9 ~= 3.0"]
mypy = ["mypy ~= 0.9", "types-PyYAML ~= 6.0"]
formatter = ["yapf ~= 0.32", "toml ~= 0.10"]
doc = ["sphinx"]

[project.urls]
Source = "https://github.com/environ-developers/envyron"
Documentation = "https://environ.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rN -v --tb=short"
testpaths = "tests"
markers = ["datadir: change directory to data location"]

[tool.mypy]
mypy_path = "stubs"
strict_optional = false
ignore_missing_imports = true

[tool.flake8]
ignore = "E123,E125,E126,E127,E133,E501,E701,F401"
hang-closing = true
