[metadata]
name = envyron
version = 0.0.1
author = Edan Bainglass
author_email = edan.bainglass@unt.edu
description = A Python implementation of the Environ continuum-embedding module
long_description = file: README.md
long_description_content_type = text/markdown
keywords = physics, chemistry, quantum, embedding, continuum, solvation
url = https://github.com/environ-developers/Envyron
project_urls =
    Website = http://www.quantum-environ.org/
    Documentation = https://environ.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/environ-developers/Envyron/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
